[gd_scene load_steps=22 format=2]

[ext_resource path="res://Characters/enemy/Mantaray_enemy.gd" type="Script" id=1]
[ext_resource path="res://Characters/enemy/Manta_Enemy_Attack-2.png" type="Texture" id=2]
[ext_resource path="res://Characters/enemy/Manta_Enemy_Attack-1.png" type="Texture" id=3]
[ext_resource path="res://Characters/enemy/Manta_Enemy_Attack-3.png" type="Texture" id=4]
[ext_resource path="res://Characters/enemy/Manta_Enemy_Attack-5.png" type="Texture" id=5]
[ext_resource path="res://Characters/Player/Effects.gd" type="Script" id=6]
[ext_resource path="res://Characters/enemy/Manta_Enemy_Attack-6.png" type="Texture" id=7]
[ext_resource path="res://testingthings/DetectWall.tscn" type="PackedScene" id=8]
[ext_resource path="res://Characters/enemy/Manta_Enemy_Attack-4.png" type="Texture" id=9]
[ext_resource path="res://Characters/enemy/Manta_Enemy-2.png" type="Texture" id=10]
[ext_resource path="res://Characters/enemy/Manta_Enemy-3.png" type="Texture" id=11]
[ext_resource path="res://Characters/enemy/Manta_Enemy-4.png" type="Texture" id=12]
[ext_resource path="res://Characters/enemy/Manta_Enemy-1.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5389, 5.15702 )

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.429, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 17.4314, 2.78185 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 35.9724, 15.9918 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 22.0012, 10 )

[sub_resource type="Animation" id=10]
resource_name = "Attack"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.1, 1.4, 1.6, 1.8, 2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 2, 4, 5, 4, 3, 1, 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
position = Vector2( 152, 94 )
scale = Vector2( 3.19604, 3.51087 )
collision_layer = 3
collision_mask = 2
script = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 1.32897, 1.07537 )
scale = Vector2( 6.46323, 1.74999 )
z_index = 1
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 1, 0.890196, 0, 1 )
position = Vector2( -0.527283, -0.75 )
z_index = -1
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 11 )
position = Vector2( -4.2966, -8.52881 )
scale = Vector2( 0.0249055, 0.0214991 )
frames = SubResource( 12 )
animation = "Attack"
frame = 2
flip_h = true

[node name="Enemy_effects" type="AnimationPlayer" parent="."]
anims/Stagger = SubResource( 4 )
script = ExtResource( 6 )

[node name="DamageTimer" type="Timer" parent="."]

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
pitch_scale = 0.81

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
position = Vector2( -2.3275, 6.09788 )
shape = SubResource( 6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -20.9634, -1.70898 )
enabled = true

[node name="DetectWall" parent="." instance=ExtResource( 8 )]

[node name="PlayerDetection" type="Area2D" parent="."]
position = Vector2( 0.117199, -7.14827 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( -37.1943, -0.114885 )
scale = Vector2( 0.613207, 0.632288 )
shape = SubResource( 8 )

[node name="AttackDetector" type="Area2D" parent="."]
position = Vector2( 0.117199, -6.8282 )
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( -37.2516, -0.268843 )
shape = SubResource( 9 )

[node name="Enemy_anim" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 10 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
